--- a/style.css
+++ b/style.css
@@ -135,6 +135,27 @@ h2 {
     object-fit: contain;
 }
 
+@media (max-width: 1024px) {
+    main {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .hero {
+        display: flex;
+        justify-content: space-around;
+        gap: 20px;
+    }
+
+    .hero-image {
+        width: 350px;
+        /* border: 2px solid #000; */
+        height: 450px;
+        object-fit: cover; 
+    }
+}
+
+
 @media (max-width: 768px) {
     .hero {
         grid-template-columns: minmax(300px, 500px);
